mobile sections done, todo: header, hover on footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700" rel="stylesheet">
 
 </head>
+
 <body>
     <header class="wrapper">
         <div>
@@ -62,6 +63,7 @@
 
             <!-- the product grid part -->
             <div class="layout__categories">
+                
                 <div class="categoryCard">
                     <div class="wrap--overlayText">
                         <h4 class="heading--categories">Air Plants</h4>
@@ -108,7 +110,7 @@
                 <div class="popularItem">
 
                     <!-- photo area + overlay-->
-                    <div class="overlayArea">
+                    < class="overlayArea">
                         <img src="assets/featured1.jpg" alt="">
 
                         <!-- overlay -->
