fixed: footer links, search bar dropdown

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="bagItemCount"><p>2</p></div>
             </a>
 
-
+            <!-- Click on the Search icon! -->
             <!-- search button toggles to target and show form -->
             <label for="toggle">
                 <img src="assets/icon-search.png" alt="Search icon">
@@ -57,6 +57,14 @@
         </div>
         <i class="fa fa-arrow-left" aria-hidden="true"></i>
         <i class="fa fa-arrow-right" aria-hidden="true"></i>
+
+        <!-- indicator dots -->
+        <div class="carouselNav">
+            <div class="indicatorDot"></div>
+            <div class="indicatorDot active"></div>
+            <div class="indicatorDot"></div>
+            <div class="indicatorDot"></div>
+        </div>
         
     </section>
 
@@ -409,7 +417,7 @@
             <div class="layout__3col">
                 <!-- blog article blurb 1 -->
                 <div class="blogBlurb">
-                    <a href="#" class="imgFit">
+                    <a href="#" class="imgHover">
                         <img src="assets/blog1.jpg" alt="">
                     </a>
                     <div class="wrap--blogBlurb">
@@ -425,7 +433,7 @@
 
                 <!-- blog article blurb 2 -->
                 <div class="blogBlurb">
-                    <a href="#" class="imgFit">
+                    <a href="#" class="imgHover">
                         <img src="assets/blog2.jpg" alt="">
                     </a>
                     <div class="wrap--blogBlurb" >
@@ -441,7 +449,7 @@
 
                 <!-- blog article blurb 3 -->
                 <div class="blogBlurb">
-                    <a href="#" class="imgFit">
+                    <a href="#" class="imgHover">
                         <img src="assets/blog3.jpg" alt="">
                     </a>
                     <div class="wrap--blogBlurb">
@@ -507,20 +515,20 @@
 
 
             <div class="layout__floatRow clearfix">
-                <a href="#">
-                    <i class="fa fa-facebook icon--social" aria-hidden="true"></i>
+                <a href="#" class="icon--social">
+                    <i class="fa fa-facebook"  aria-hidden="true"></i>
                 </a>
-                <a href="#">
-                    <i class="fa fa-twitter icon--social" aria-hidden="true"></i>
+                <a href="#" class="icon--social">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
                 </a>
-                <a href="#">
-                    <i class="fa fa-google-plus icon--social" aria-hidden="true"></i>
+                <a href="#" class="icon--social">
+                    <i class="fa fa-google-plus" aria-hidden="true"></i>
                 </a>
-                <a href="#">
-                    <i class="fa fa-instagram icon--social" aria-hidden="true"></i>
+                <a href="#" class="icon--social">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
-                <a href="#">
-                    <i class="fa fa-pinterest icon--social" aria-hidden="true"></i>
+                <a href="#" class="icon--social">
+                    <i class="fa fa-pinterest" aria-hidden="true"></i>
                 </a>
             </div>
         </div>
@@ -551,25 +559,25 @@
         </div>
 
         <div class="wrap--footerSection3">
-            <h6 class="heading--footer underline--short">Services</h6>
+            <h6 class="heading--footer underline--short">Your Account</h6>
             <ul class="wrap--footerLinks">
                 <li>
-                    <a href="#" class="link link--footer">International Shipping</a>
+                    <a href="#" class="link link--footer">Your Order</a>
                 </li>
                 <li>
-                    <a href="#" class="link link--footer">Terms and Conditions</a>
+                    <a href="#" class="link link--footer">Your Wishlist</a>
                 </li>
                 <li>
-                    <a href="#" class="link link--footer">Orders and Returns</a>
+                    <a href="#" class="link link--footer">Payment Method</a>
                 </li>
                 <li>
-                    <a href="#" class="link link--footer">Shipping Rates</a>
+                    <a href="#" class="link link--footer">Newsletter</a>
                 </li>
                 <li>
-                    <a href="#" class="link link--footer">FAQs</a>
+                    <a href="#" class="link link--footer">About Us</a>
                 </li>
                 <li>
-                    <a href="#" class="link link--footer">Contact</a>
+                    <a href="#" class="link link--footer">Pivacy Policy</a>
                 </li>
             </ul>
         </div>
@@ -577,31 +585,31 @@
         <div class="wrap--footerSection4">
             <h6 class="heading--footer underline--short">Instagram</h6>
             <div class="layout__footerInsta">
-                <a href="#">
+                <a href="#" class="imgHover">
                     <img src="assets/insta1.png" alt="">
                 </a>
-                <a href="#">
+                <a href="#" class="imgHover">
                     <img src="assets/insta2.jpg" alt="">
                 </a>
-                <a href="#">
+                <a href="#" class="imgHover">
                     <img src="assets/insta3.jpg" alt="">
                 </a>
-                <a href="#">
+                <a href="#" class="imgHover">
                     <img src="assets/insta4.jpg" alt="">
                 </a>
-                <a href="#">
+                <a href="#" class="imgHover">
                     <img src="assets/insta5.jpg" alt="">
                 </a>
-                <a href="#">
+                <a href="#" class="imgHover">
                     <img src="assets/insta6.jpg" alt="">
                 </a>
             </div>
-            <div class="layout__floatRow clearfix">
-                <a href="#"><img src="assets/graphics-cc1.png" alt="Amex card"></a>
-                <a href="#"><img src="assets/graphics-cc2.png" alt="Discover card"></a>
-                <a href="#"><img src="assets/graphics-cc3.png" alt="Visa card"></a>
-                <a href="#"><img src="assets/graphics-cc4.png" alt="Mastercard"></a>
-                <a href="#"><img src="assets/graphics-cc5.png" alt="Debit card"></a>
+            <div class="layout__floatRow clearfix wrap-cc">
+                <a href="#" class="imgHover"><img src="assets/graphics-cc1.png" alt="Amex card"></a>
+                <a href="#" class="imgHover"><img src="assets/graphics-cc2.png" alt="Discover card"></a>
+                <a href="#" class="imgHover"><img src="assets/graphics-cc3.png" alt="Visa card"></a>
+                <a href="#" class="imgHover"><img src="assets/graphics-cc4.png" alt="Mastercard"></a>
+                <a href="#" class="imgHover"><img src="assets/graphics-cc5.png" alt="Debit card"></a>
             </div>
         </div>
 
