--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
     <section class="hero">
         <div class="hero-carousel">
             <div class="carousel-cell">
-                <img src="/assets/hero-1.png" alt="white and pink roses">
+                <img src="assets/hero-1.png" alt="white and pink roses">
             </div>
             <div class="carousel-cell">
-                <img src="/assets/hero-2.png" alt="white and pink roses">
+                <img src="assets/hero-2.png" alt="white and pink roses">
             </div>
             <div class="carousel-cell">
-                <img src="/assets/hero-3.png" alt="white and pink roses">
+                <img src="assets/hero-3.png" alt="white and pink roses">
             </div>
             <div class="carousel-cell">
-                <img src="/assets/hero-4.png" alt="white and pink roses">
+                <img src="assets/hero-4.png" alt="white and pink roses">
             </div>
         </div>
         <div class="wrap--hero">
